Fix header getting stuck

--- a/packages/jm-srf-components/styles/global.css
+++ b/packages/jm-srf-components/styles/global.css
@@ -6,7 +6,6 @@
 
 html,
 body {
-	height: 100%;
 	background-color: var(--color-light);
 	color: var(--color-dark);
 	font-weight: 300;
